--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "b-convert",
   "version": "0.1.0",
+  "homepage": "https://yury-odinson.github.io/b-convert",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
